# Cloned.SoftPixelEngine

./: CMakeLists.txt  FindSoftPixelEngine.cmake  History.txt  README.md
help/tutorials/iOS-Tutorial/: CMakeLists.txt
tools/MeshViewer/sources/: CMakeLists.txt  main.cpp
trunk/: CMakeLists.txt  FindSoftPixelEngine.cmake  History.txt  Information.txt  LICENSE.txt
trunk/db/: uuid
trunk/db/revprops/0/: 0
trunk/help/tutorials/: common.hpp
trunk/sources/: FindDirectX.cmake  FindOpenAL.cmake  SoftPixelEngine.hpp
trunk/sources/Base/: spAssetContainer.hpp  spBaseExceptions.hpp  spBaseFileFormatHandler.cpp  spBaseFileFormatHandler.hpp  spBaseObject.hpp  spBasicMeshGenerator.cpp  spBasicMeshGenerator.hpp  spCompilationOptions.hpp  spConvexPolyhedron.hpp  spCriticalSection.cpp  spCriticalSection.hpp  spDimension.hpp  spDimensionAABB.hpp  spDimensionCone3D.hpp  spDimensionContainer4.hpp  spDimensionLine3D.hpp  spDimensionMatrix2.hpp  spDimensionMatrix3.hpp  spDimensionMatrix4.hpp  spDimensionOBB.hpp  spDimensionPlane3D.hpp  spDimensionPoint2D.hpp  spDimensionPolygon.hpp  spDimensionQuadrangle3D.hpp  spDimensionQuaternion.hpp  spDimensionRect2D.hpp  spDimensionSize2D.hpp  spDimensionTriangle3D.hpp  spDimensionUniversalBuffer.hpp  spDimensionVector2D.hpp  spDimensionVector3D.hpp  spDimensionVector4D.hpp  spGeometryStructures.hpp  spImageBuffer.cpp  spImageBuffer.hpp  spImageBufferContainer.hpp  spImageBufferFloat.cpp  spImageBufferFloat.hpp  spImageBufferUByte.cpp  spImageBufferUByte.hpp  (+83 more)
trunk/sources/GUI/: spGUIBasicObject.cpp  spGUIButtonGadget.cpp  spGUIButtonGadget.hpp  spGUICheckboxGadget.cpp  spGUIContainerGadget.cpp  spGUIContainerGadget.hpp  spGUIController.cpp  spGUIController.hpp  spGUIGadget.cpp  spGUIListGadget.cpp  spGUIListGadget.hpp  spGUIManager.cpp  spGUIMenuItem.cpp  spGUIMenuItem.hpp  spGUIProgressbarGadget.cpp  spGUIScrollViewBased.hpp  spGUIScrollbarGadget.cpp  spGUIScrollbarGadget.hpp  spGUIStringGadget.cpp  spGUIStringGadget.hpp  spGUITextGadget.hpp  spGUITrackbarGadget.cpp  spGUITrackbarGadget.hpp  spGUITreeGadget.cpp  spGUITreeGadget.hpp  spGUIWebGadget.cpp  spGUIWebGadget.hpp  spGUIWindow.cpp
trunk/sources/Platform/: spSoftPixelDevice.cpp  spSoftPixelDevice.hpp  spSoftPixelDeviceAndroid.cpp  spSoftPixelDeviceAndroid.hpp  spSoftPixelDeviceFlags.hpp  spSoftPixelDeviceIOS.cpp  spSoftPixelDeviceIOS.hpp  spSoftPixelDeviceLinux.cpp  spSoftPixelDeviceLinux.hpp  spSoftPixelDeviceMacOSX.cpp  spSoftPixelDeviceMacOSX.hpp  spSoftPixelDeviceWindows.cpp  spSoftPixelDeviceWindows.hpp  spWin32Callback.cpp
trunk/sources/RenderSystem/: spComputeShader.hpp  spConstantBuffer.cpp  spDesktopRenderContext.cpp  spDesktopRenderContext.hpp  spDummyRenderSystem.cpp  spDummyRenderSystem.hpp  spMovieSequencePacket.hpp  spQuery.hpp  spRenderContext.cpp  spRenderContext.hpp  spRenderSystem.cpp  spRenderSystem.hpp  spRenderSystemFont.cpp  spRenderSystemFont.hpp  spRenderSystemMovie.cpp  spShaderClass.cpp  spShaderClass.hpp  spShaderConfigTypes.hpp  spShaderCore.cg  spShaderCore.glsl  spShaderCore.hlsl  spShaderCore.hlsl3  spShaderCore.hlsl5  spShaderCoreStr.cg  spShaderCoreStr.glsl  spShaderCoreStr.hlsl5  spShaderProgram.cpp  spShaderProgram.hpp  spShaderResource.hpp  spSharedRenderContext.hpp  spTextureBase.cpp  spTextureBase.hpp  spTextureFlags.hpp  spTextureLayer.cpp  spTextureLayer.hpp  spTextureLayerDefault.cpp  spTextureLayerDefault.hpp  spTextureLayerRelief.hpp  spTextureLayerStandard.hpp  spVideoModeEnumerator.cpp  (+1 more)
trunk/sources/Resources/: D3D11DefaultBasicShader2D(SM4)_RAW.h  D3D11DefaultBasicShader3D(SM4).h  LightmapGenerationShader.cl  RayTracingShader.cl  ShaderParser.pb  spBloomFilterStr.cg  spBloomFilterStr.glfrag  spBloomFilterStr.glvert  spDebugVPLStr.glfrag  spDebugVPLStr.glvert  spDefaultDrawingShaderStr.hlsl  spDefaultPrimDrawingShaderStr.hlsl  spDefaultShaderStr.hlsl  spDeferredShaderLowResVPLStr.glfrag  spDeferredShaderStr.cg  spDeferredShaderStr.glfrag  spDeferredShaderStr.glvert  spDeferredShaderStr.hlsl  spForwardShaderStr.glfrag  spGBufferShaderStr.cg  spGBufferShaderStr.glfrag  spGBufferShaderStr.glvert  spGBufferShaderStr.hlsl  spLightGridShaderStr.hlsl  spLightmapGenerationShaderStr.hlsl  spShaderCoreStr.glsl  spShaderCoreStr.hlsl3  spShaderCoreStr.hlsl5  spShadowShaderStr.hlsl  spVPLGeneratorShaderStr.hlsl
trunk/sources/SceneGraph/: spBoundingVolume.hpp  spCameraBlender.cpp  spCameraFirstPerson.cpp  spCameraTracking.cpp  spCameraTracking.hpp  spMaterialNode.cpp  spMaterialNode.hpp  spMeshModifier.cpp  spMeshModifier.hpp  spRenderNode.cpp  spRenderNode.hpp  spSceneBillboard.cpp  spSceneBillboard.hpp  spSceneCamera.cpp  spSceneCamera.hpp  spSceneGraph.cpp  spSceneGraph.hpp  spSceneGraphFamilyTree.cpp  spSceneGraphFamilyTree.hpp  spSceneGraphPortalBased.cpp  spSceneGraphPortalBased.hpp  spSceneGraphSimple.cpp  spSceneGraphSimple.hpp  spSceneGraphSimpleStream.hpp  spSceneGraphTree.hpp  spSceneLight.cpp  spSceneLight.hpp  spSceneManager.cpp  spSceneManager.hpp  spSceneMesh.cpp  spSceneMesh.hpp  spSceneNode.cpp  spSceneNode.hpp  spScenePortal.cpp  spScenePortal.hpp  spSceneSector.hpp  spSceneTerrain.cpp  spSceneTerrain.hpp
trunk/sources/SoundSystem/: spDummySound.cpp  spDummySound.hpp  spDummySoundDevice.cpp  spDummySoundDevice.hpp  spSound.cpp  spSound.hpp  spSoundDevice.cpp  spSoundDevice.hpp
trunk/tests/: common.hpp
trunk/tests/AdvancedRendererTests/: CornellBox.spm  main.cpp
trunk/tests/AnimationTests/: CMakeLists.txt  main.cpp
trunk/tests/AudioTests/: CMakeLists.txt  DebugBufferOutput.txt  main.cpp
trunk/tests/BillboardingTests/: AnimPoints.h
trunk/tests/DeferredRendererTests/: CMakeLists.txt  TestSceneLarge.spm  main.cpp
trunk/tests/DrawTextTests/: main.cpp
trunk/tests/GLSLComputeTests/: CMakeLists.txt  Draw.glfrag  GLComputeShader.glsl  main.cpp
trunk/tests/InputTests/: main.cpp
trunk/tests/LightScatteringTests/: LightScatteringFx.glfrag  LightScatteringLit.glfrag  LightScatteringLit.glvert  main.cpp
trunk/wrapper/: CMakeLists.txt  spwMainDevice.cpp  spwRenderSystem.cpp  spwSceneGraph.cpp  spwStandard.cpp  spwStandard.hpp
(+1387 files in other folders)
